version 3.0 Manu Exposito/tests/error/error2.prg
procedure main()

	mh_setErrorBlock( { | hError | MyError( hError ) } )
	
	? a + 5
	
return 

procedure MyError( hError )

	? hError
	
return
